wcdatavis.css
/* ... */
.wcdv_sortable_helper {
}

/******************************************************************************/

.wcdvgrid_textLeft {
    text-align: left;
}

.wcdvgrid_textRight {
    text-align: right;
}

.wcdvgrid_textCenter {
    text-align: center;
}

.wcdvgrid_textJustify {
    text-align: justify;
}

.wcdv_centered {
	margin-left: auto;
	margin-right: auto;
}

.wcdv_nowrap {
	white-space: nowrap;
}

/******************************************************************************/
/* COLUMN RESIZING                                                            */
/******************************************************************************/

.wcdv_resizable_column {
	position: relative;
}

.wcdv_column_resize_handle {
	position: absolute;
	right: 0;
	top: 0;
	bottom: 0;
	width: 5px;
	cursor: col-resize;
	background-color: transparent;
	z-index: 10;
}

.wcdv_column_resize_handle:hover {
	background-color: #0095D6;
}

.wcdv_resizing {
	cursor: col-resize !important;
	user-select: none;
}

.wcdv_resizing * {
	cursor: col-resize !important;
}

/* Use table-layout: fixed for proper column width control */
.wcdv_grid_table table.wcdv-resizable-cols {
	table-layout: fixed;
}

/******************************************************************************/
/* COLUMN REORDERING                                                          */
/******************************************************************************/

.wcdv_reorderable_column {
	cursor: grab;
}

.wcdv_reorderable_column:active {
	cursor: grabbing;
}

.wcdv_column_dragging {
	background-color: #E3F2FD !important;
}

.wcdv_column_drop_target {
	background-color: #BBDEFB !important;
	box-shadow: inset 0 0 0 2px #0095D6;
}

.wcdv_column_drop_indicator {
    position: absolute;
    width: 3px;
    border-left: 3px dashed #4CAF50;
    pointer-events: none;
    z-index: 1000;
    display: none;
}

/******************************************************************************/
/* ROW MODE (CLIPPED vs WRAPPED)                                              */
/******************************************************************************/

/* Wrapped mode (default) - cells can wrap to multiple lines */
.wcdv_grid_table.wcdv_row_mode_wrapped td {
	white-space: normal;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

/* Clipped mode - single line cells with text truncated */
.wcdv_grid_table.wcdv_row_mode_clipped td {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	max-width: 300px;
}

.wcdv_grid_table.wcdv_row_mode_clipped th {
	white-space: nowrap;
}

/* Allow overflow visible on headers for resize handles */
.wcdv_grid_table.wcdv_row_mode_clipped th.wcdv_resizable_column {
	overflow: visible;
}

/*
 * The "show more rows" button, shown when using the "more" limit method.
 */

tr.wcdvgrid_more td {
	background-color: #F6F6F9;
	border-top: 3px double #808080;
	font-weight: normal;
	color: #646464;
	font-size: .85em;
	font-weight: normal;
	padding-bottom: 3px;
	padding-top: 3px;
	text-transform: uppercase;
	cursor: pointer;
}

/*
.wcdv_grid .tabletool .thead {
	overflow: initial;
}

.wcdv_grid .tabletool .outer.thead {
	overflow: initial;
}

.wcdv_grid .tabletool.ttsticky .outer.thead .inner {
	overflow: initial;
}
*/

.ui-progressbar.wcdvgrid_progressbar {
	height: 32px;
	padding: 8px;
}

.ui-progressbar .ui-progressbar-value.wcdvgrid_progressbar {
	background: #80A0C0;
}

.ui-resizable-helper {
	border: solid 2px dotted;
}

/*
 * =============================================================================
 *  BASIC TABLE STYLES
 * =============================================================================
 */

.wcdv_grid_table table {
	/*
	 * If we use border-collapse then the border of the sticky header <th> elements will scroll with
	 * the table body, rather than being stuck with the <th> elements. Using border-spacing instead.
	 */
	/* border-collapse: collapse; */
	border-spacing: 0;
	background-color: #FFFFFF;
	font-size: 1em;
	width: 100%;
}

.wcdv_grid_table table th {
	background-color: #FFF;
    color: #737373;
	font-weight: normal;
	line-height: 16px;
	text-align: left;
}

.wcdv_grid_table table thead th {
	background-color: #737373;
	color: #FFF;
}

.wcdv_sort_column_active.wcdv_bg-primary{
	color: #FFF;
}

/*
.wcdv_grid_table table th.wcdv_sort_column_active {
	background-color: rgba(255, 152, 0, 0.2);
}
*/

.wcdv_grid_table table > thead > tr:first-child > th:first-child {
	border-bottom: none;
}

.wcdv_grid_table table > thead > tr > th {
	padding: 5px 4px;
}

.wcdv_grid_table table > thead > tr + tr > th{
	background-color: #f0f0f5;
    color: #000;
    border-bottom: 1px solid #000;
}

/*
.wcdv_grid_table table > thead > tr:last-child > th {
	border-bottom: none !important;
}
*/

.wcdv_grid_table table > tfoot {
	background-color: #F6F6F9;
	border-top: 3px double #808080;
}

.wcdv_grid_table table > tfoot > tr {
	border-bottom: solid 1px #c7c7c7;
}

.wcdv_grid_table table > tfoot > tr:last-child {
	border-bottom: none;
}

.wcdv_grid_table table.zebra > tbody > tr:nth-child(even), .wcdv_grid_table table > tbody > tr.even {
	/* blue: background-color: #e3f2fd; */
	background-color: #e8f5e9;
}

.wcdv_grid_table table.zebra > tbody > tr.odd {
	background-color: white;
}

.wcdv_grid_table table td.wcdv_selected_row {
	background-color: rgba(255, 235, 59, .4);
}

.wcdv_grid_table table td.wcdv_focus {
	background-color: rgba(76, 175, 80, .3);
}

/*
.wcdv_grid_table table > tbody > tr:first-child > td,
.wcdv_grid_table table > tbody > tr:first-child > th {
	padding-top: 4px;
}
*/

.wcdv_grid_table table td,
.wcdv_grid_table table th {
	padding: 4px;
	vertical-align: top;
}

.wcdv_grid_table table .wcdv_divider {
	border-left: solid 1px #c7c7c7;
	padding-left: 4px !important;
}

.wcdv_grid_table table .wcdv_pivot_colval_boundary {
	border-left: solid 1px #c7c7c7;
	padding-left: 4px !important;
}

.wcdv_grid_table table .wcdv_pivot_colval_boundary:first-child{
	border-left: none;
}
/* ... */

